--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "nodemailer": "^6.9.8",
     "pg": "^8.11.3"
   },
   "name": "node_hackathon",
